[gd_scene load_steps=2 format=3 uid="uid://dnanhxy5fptrl"]

[ext_resource type="Script" path="res://Scrips/GameOver.gd" id="1_ygh5t"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_ygh5t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 1.0
offset_top = 4.0
offset_right = 1150.0
offset_bottom = 651.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.5
offset_top = -295.5
offset_right = -271.5
offset_bottom = -272.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "GAME OVER"

[node name="Label2" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -535.5
offset_top = -159.5
offset_right = -423.5
offset_bottom = -136.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "NOMBRE:"

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 55.0
offset_top = 116.0
offset_right = 167.0
offset_bottom = 139.0
text = "SCORE: "

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 156.0
offset_right = 302.0
offset_bottom = 189.0
max_length = 6

[node name="Submit" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 327.0
offset_top = 156.0
offset_right = 431.0
offset_bottom = 187.0
text = "Enviar"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 501.0
offset_top = 59.0
offset_right = 1108.0
offset_bottom = 588.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 127.0
offset_top = 260.0
offset_right = 366.0
offset_bottom = 592.0
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="CanvasLayer/Panel/VBoxContainer2"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
text = "Reintentar"

[node name="Button2" type="Button" parent="CanvasLayer/Panel/VBoxContainer2"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
text = "Volver al menu"

[node name="QuitButton" type="Button" parent="CanvasLayer/Panel/VBoxContainer2"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
action_mode = 0
text = "Salir del juego"

[connection signal="pressed" from="CanvasLayer/Panel/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
